<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="addBill">Add Bill</string>
    <string name="allBills">All Bills</string>
    <string name="Description">Description</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Choose_an_action">Choose an action</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="choose_start_time">start time</string>
    <string name="choosee_start_time">start time</string>
    <string name="reminders">Reminder</string>
    <string name="select_frequency">Repetition times</string>
    <string name="once_daily">once daily (every 24 hours)</string>
    <string name="twice_daily">twice daily (every 12 hours)</string>
    <string name="three_times_daily">three times daily (every 8 hours)</string>
    <string name="four_times_daily">four times daily (every 6 hours)</string>
    <string name="select_period_of_medication">select duration of medication</string>
    <string name="period">duration</string>
    <string name="Forever">Forever</string>
    <string name="for_two_weeks">for two weeks</string>
    <string name="for_ten_days">for ten days</string>
    <string name="for_a_week">for a week</string>
    <string name="medicine_image">medicine image</string>
    <string name="medication_for_today">medication for today</string>
    <string name="edit_photo">edit photo</string>
    <string name="done">done</string>
    <string name="switchoffflash">switch off flash</string>
    <string name="about">About</string>
    <string name="rafeeq_app">Rafeeq, Find everything you need </string>
    <string name="add_advertise">Add Advertise</string>
    <string name="copyright"> copyright are specific to SR/Dev"</string>
    <string name="app_name">Rafeeq</string>
    <string name="medications">Medications Reminder</string>
    <string name="bills">Bills Reminder</string>
    <string name="activities">Activities</string>
    <string name="flashlight">Flashlight</string>
    <string name="time_is_required">
 is Required</string>
    <string name="Quit">Are you sure you want to exit?</string>
    <string name="Rate_app">Rate App</string>
    <string name="Yes">Yes</string>
    <string name="switchOnCamera">Switch on Flashlight</string>
    <string name="flash_light">FlashLight</string>
    <string name="add_medicine">Add medicine</string>
    <string name="all_medicines">All medication</string>
    <string name="title_activity_bills">bills</string>
    <string name="title_home">Home</string>
    <string name="title_activity_medications">Medications</string>
    <string name="enter_medicine_name">Enter medication name</string>
    <string name="medicine_name">Medication Name</string>
    <string name="currentBills">Current Bills</string>
    <string name="set">Set</string>
    <string name="medname">medName</string>
    <string name="title_activity_nav__drawer">Nav_Drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="night_mode">Night Mode On</string>
    <string name="language">Language</string>
    <string name="choose_country">Choose Your Country</string>
    <string name="exit">Exit</string>
    <string name="title_notifications">Notification</string>
    <string name="magnifier">Magnifier</string>
    <string name="add_bill_button">Add new Bill</string>
    <string name="add_bill">Add Bill</string>
    <string name="billName_is_required">Bill name is required</string>
    <string name="date_is_required">Date is required</string>
    <string name="No">No</string>
    <string name="magnifier_glass">Magnifier</string>
    <string name="today">Today</string>
    <string name="missedBills">Missed Bills</string>
    <string name="finishedBills">Finished Bills</string>
    <string name="empty_state">No Bills</string>
    <string name="date_of_day">Date of Day</string>
    <string name="capture_medicine_picture">Capture picture of medicine</string>
    <string name="capture_pic">Capture picture</string>
    <string name="date">Date</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="social">Communicate</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="new_medicine">New Medicine</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="choose_start_day">Choose Start Day</string>
    <string name="ok">OK</string>
    <string name="title_msg">Time to take medicine</string>
    <string name="title_msg_bill">title</string>
    <string name="titlee">title</string>
    <string name="title">title</string>
    <string name="titttle">تذكير</string>
    <string name="alert_content">Alert content</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="dateformate">dd/MM/yyyy</string>


    <string name="bill_name">Bill Name</string>
    <string name="reminder_times">Reminder Times</string>
    <string name="choose_reminder_time">Choose reminder time</string>
    <string name="Schedule">Schedule</string>
    <string name="Choose_Date">Choose Date</string>
    <string name="choose_language">Choose Language..</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_off">Off</string>
    <string name="choose_nightMode_state">Choose Night Mode State</string>
    <string name="night_modeOn">Night Mode is On</string>
    <string name="night_modeOff">Night Mode is Off</string>
    <string name="Date">Date:"  "</string>
    <string name="reminder_monthly">Reminder</string>
    <string name="alarm">Set Alarm</string>
    <string name="notification">Set Notification</string>
    <string name="Done">Done ✔</string>
    <string name="electricity_bill">Electricity Bill</string>
    <string name="water_bill">Water Bill</string>
    <string name="gas_bill">Gas Bill</string>
    <string name="internet_bill">Internet Bill</string>
    <string name="telephone_bill">Telephone Bill</string>
    <string name="reAdd_bill">Re add bill</string>
    <string name="bill_added_success">Bill added successfully</string>
    <string name="app_version">1.0</string>
    <string name="time">Time</string>

    <string name="copyright_text">Copyright © 2019, SR\'Dev </string>
    <string name="rights">All rights reserved</string>
    <string name="alarmtext">Alert:"  "</string>
    <string name="alert_title">Reminder</string>
    <string name="Not_Set">Not Set</string>
    <string name="bills_array2" />
    <string name="both">Both</string>
    <string name="intent_row_id">rowID</string>
    <string name="row_id_log">rowID</string>
    <string name="update_delete">Update/Delete</string>
    <string name="deleted">Deleted</string>
    <string name="medName_is_required">medicine name is required</string>
    <string name="edit_start_time">Edit start date</string>
    <string name="open">Open</string>

    <string-array name="bills_array">
        <item>Electricity Bill</item>
        <item>Water Bill</item>
        <item>Gas Bill</item>
        <item>Internet Bill</item>
        <item>Telephone Bill</item>
    </string-array>

</resources>
