<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/med_img"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/txtlinear"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/medname" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginEnd="8dp"
    android:layout_alignParentEnd="true"
    android:id="@+id/txtlinear"
    >
    <TextView
        android:id="@+id/med_name"
        android:layout_width="match_parent"
        android:layout_height="28dp"
android:layout_margin="6dp"        android:text="@string/medicine_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:text="@string/date"
        android:textSize="24sp"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:text="@string/time"
        android:textSize="24sp"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

</LinearLayout>

</RelativeLayout>