<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e4e4e4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_bill_ac"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/bill_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/bill_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/add_bill_ac"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/reminder_times"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminder_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_access_time"
                android:hint="@string/choose_reminder_time"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/add_bill_ac"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Schedule"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Date"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reminder_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Choose_Date"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:background="#CDCDCD" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/reminder_monthly"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/alarm"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/notification"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/notify"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/both"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/Update"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/Delete"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

